# wgpu_renderer

./: Cargo.toml  LICENSE
assets/shaders/: deferred.wgsl  invert.wgsl  post_process.wgsl  shader.wgsl  shader_instanced.wgsl  shadow.wgsl
shaders/: shader.wgsl
src/: main.rs
src/renderer/: asset_manager.rs  auto_mipmapper.rs  bind_group_cache.rs  components.rs  gpu_mesh.rs  gpu_storage.rs  light_storage.rs  material.rs  material_resource.rs  mesh.rs  mod.rs  pipeline_manager.rs  render_batcher.rs  render_graph.rs  shader_reflect.rs  shadow_atlas.rs  shadow_data_storage.rs  systems.rs  texture.rs  transform.rs
src/renderer/ecs/: camera_component.rs  components.rs  global_component.rs  instancing_component.rs  light_manager.rs  light_update_view.rs  mod.rs  render_graphics_view.rs  systems.rs
src/renderer/types/: aabb.rs  camera.rs  fps_camera.rs  frustum.rs  global.rs  gpu_mesh.rs  instance_data.rs  light.rs  light_storage.rs  light_type.rs  material.rs  material_resource.rs  mesh.rs  mod.rs  plane.rs  sampler.rs  shadow_data.rs  texture.rs  transform.rs  uniform.rs  vertex.rs
